--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@
                             <h3 class="cost">$100</h3>
                             <div class="content">
                                 <ol type="1">
-                                    <li>1. hi!11111111</li>
-                                    <li>bye!</li>
-                                    <li>tye</li>
-                                    <li>bly</li>
+                                    <li>first second third</li>
+                                    <li>first second third</li>
+                                    <li>first second third</li>
+                                    <li>first second third</li>
                                 </ol>
                                 <button>BUY</button>
                             </div>
@@ -144,14 +144,14 @@
                             <h3 class="cost">$150</h3>
                             <div class="content">
                                 <ol type="1">
-                                    <li>1. hi!11111111</li>
-                                    <li>bye!</li>
-                                    <li>tye</li>
-                                    <li>bly</li>
-                                    <li>1. hi!11111111</li>
-                                    <li>bye!</li>
-                                    <li>tye</li>
-                                    <li>bly</li>
+                                    <li>first second third</li>
+                                    <li>first second third</li>
+                                    <li>first second third</li>
+                                    <li>first second third</li>
+                                    <li>first second third</li>
+                                    <li>first second third</li>
+                                    <li>first second third</li>
+                                    <li>first second third</li>
                                 </ol>
                                 <button>BUY</button>
                             </div>
@@ -163,18 +163,18 @@
                             <h3 class="cost">$200</h3>
                             <div class="content">
                                 <ol type="1">
-                                    <li>1. hi!11111111</li>
-                                    <li>bye!</li>
-                                    <li>tye</li>
-                                    <li>bly</li>
-                                    <li>1. hi!11111111</li>
-                                    <li>bye!</li>
-                                    <li>tye</li>
-                                    <li>bly</li>
-                                    <li>1. hi!11111111</li>
-                                    <li>bye!</li>
-                                    <li>tye</li>
-                                    <li>bly</li>
+                                    <li>first second third</li>
+                                    <li>first second third</li>
+                                    <li>first second third</li>
+                                    <li>first second third</li>
+                                    <li>first second third</li>
+                                    <li>first second third</li>
+                                    <li>first second third</li>
+                                    <li>first second third</li>
+                                    <li>first second third</li>
+                                    <li>first second third</li>
+                                    <li>first second third</li>
+                                    <li>first second third</li>
                                 </ol>
                                 <button>BUY</button>
                             </div>
